# Deepseek-Aegis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: aegis_bridge.rs  cli.rs  lib.rs  logging.rs  main.rs  perf.rs
crates/cli/src/agent/: bridge.rs  events.rs  mod.rs
crates/cli/src/app/: clipboard_image.rs  input.rs  input_submit.rs  keys.rs  mention.rs  mod.rs  subagent.rs  terminal.rs  update_check.rs
crates/cli/src/app/auth/: mod.rs  permissions.rs
crates/cli/src/app/auth/trust/: mod.rs
crates/cli/src/app/config/: edit.rs  help.rs  mcp.rs  mcp_edit.rs  mod.rs  resolve.rs  store.rs  tests.rs
crates/cli/src/app/connect/: bridge_lifecycle.rs  event_dispatch.rs  mod.rs  session_start.rs  type_converters.rs
crates/cli/src/app/events/: api_retry.rs  client.rs  mod.rs  rate_limit.rs  session.rs  session_reset.rs  streaming.rs  tests.rs  tool_calls.rs  tool_updates.rs  turn.rs
crates/cli/src/app/interaction/: inline.rs  mod.rs  questions.rs
crates/cli/src/app/plugins/: mod.rs
crates/cli/src/app/session/: mod.rs  picker.rs  runtime.rs
crates/cli/src/app/slash/: candidates.rs  executors.rs  mod.rs
crates/cli/src/app/state/: history_retention.rs  mod.rs  render_budget.rs  tool_call_info.rs  types.rs
crates/cli/src/app/tools/: mod.rs  subagent.rs  todos.rs
crates/cli/src/app/updates/: check.rs  mod.rs  service_status.rs
crates/cli/src/app/usage/: mod.rs  oauth.rs
crates/cli/src/app/view/: tests.rs
crates/cli/src/bridge/: client.rs  events.rs  mod.rs  native.rs  wire.rs
crates/cli/src/tui/: mod.rs  types.rs
crates/cli/src/tui/render/: markdown.rs  mod.rs
crates/cli/src/ui/: autocomplete.rs  config.rs  diff.rs  footer_rows.rs  inline_chat_rows.rs  input.rs  mod.rs  session_picker.rs  welcome.rs  wrap.rs
crates/cli/src/ui/config/: mcp.rs  status.rs
crates/cli/src/ui/tool_call/: errors.rs  execute.rs  interactions.rs  mod.rs  standard.rs
crates/code-graph/: Cargo.toml
crates/code-graph/src/: extractor.rs  incremental.rs  lib.rs  mcp_tool.rs  parser.rs  query.rs  store.rs  types.rs
crates/code-graph/src/language/: go.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  shutdown.rs
crates/core/src/agent/: confidence.rs  context.rs  conversation.rs  harness.rs  healing.rs  helpers.rs  loop_.rs  mod.rs  output.rs  subagent.rs  system_prompt.rs
crates/core/src/agent/loop_/: execution.rs  mod.rs  retry.rs  run.rs  streaming.rs  verification.rs
crates/core/src/constants/: limits.rs  logging.rs  mod.rs
crates/core/src/hooks/: mod.rs
crates/core/src/job/: mod.rs
crates/core/src/llm/: cache.rs  client.rs  deepseek.rs  deepseek_tests.rs  e2e_tests.rs  integration_tests.rs  mod.rs  scorer.rs
crates/core/src/lsp/: mod.rs
crates/core/src/migrations/: mod.rs
crates/core/src/migrations/sql/: 001_init_code_graph.sql  002_init_memory.sql
crates/core/src/network/: mod.rs
crates/core/src/permissions/: mod.rs
crates/core/src/skills/: mod.rs
crates/core/src/snapshots/: mod.rs
crates/core/src/tool_system/: dispatch.rs  mod.rs  permissions.rs  registry.rs  repair.rs
crates/core/src/types/: config.rs  message.rs  mod.rs  sandbox.rs  tool.rs
crates/core/src/utils/: fs.rs  json.rs  mod.rs  tokens.rs
crates/desktop/: README.md  build.bat  components.json  dev.bat  dev.sh  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  types.d.ts  vite.config.ts
crates/desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/desktop/src-tauri/src/: config.rs  events.rs  im.rs  lib.rs  main.rs  project.rs  state.rs
crates/desktop/src-tauri/src/commands/: audit.rs  client_event.rs  graph.rs  mod.rs  session.rs
crates/desktop/src-tauri/src/computer/: input.rs  launch.rs  mod.rs  screen.rs  snapshot.ps1  snapshot.rs
crates/desktop/src/ui/: App.tsx  icons.tsx  index.css  main.tsx  styles.css  types.ts
crates/desktop/src/ui/components/: Toast.tsx  (+19 more)
crates/im/: Cargo.toml
crates/im/src/: feishu.rs  lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: acp.rs  client.rs  config.rs  health.rs  lib.rs  manager.rs  server.rs  tools.rs  transport.rs  types.rs
crates/memory/: Cargo.toml
crates/memory/src/: consolidation.rs  embedding.rs  episode.rs  gating.rs  lib.rs  retrieval.rs  schema.rs  store.rs  types.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: cleanup.rs  extension.rs  lib.rs  monitor.rs  pool.rs  process.rs  proxy.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/tools/src/agent/: mod.rs
crates/tools/src/apply_patch/: mod.rs
crates/tools/src/ask_user/: mod.rs
crates/tools/src/bash/: constants.rs  mod.rs  security.rs
crates/tools/src/config_tool/: mod.rs
crates/tools/src/cron/: mod.rs
crates/tools/src/diagnostics/: mod.rs
crates/tools/src/file_edit/: constants.rs  mod.rs
crates/tools/src/file_read/: constants.rs  mod.rs
crates/tools/src/file_search/: mod.rs
crates/tools/src/file_write/: mod.rs
crates/tools/src/git/: mod.rs
crates/tools/src/glob/: mod.rs
crates/tools/src/grep/: mod.rs
crates/tools/src/list_dir/: mod.rs
crates/tools/src/lsp/: mod.rs
crates/tools/src/plan/: mod.rs
crates/tools/src/remember/: mod.rs
crates/tools/src/review/: mod.rs
crates/tools/src/run_tests/: mod.rs
crates/tools/src/shared/: mod.rs
crates/tools/src/skill/: mod.rs
crates/tools/src/sleep_/: mod.rs
crates/tools/src/task/: mod.rs
crates/tools/src/todo_write/: mod.rs
crates/tools/src/tool_search/: mod.rs
crates/tools/src/validate/: mod.rs
crates/tools/src/web_fetch/: constants.rs  mod.rs
crates/tools/src/web_search/: mod.rs
crates/tools/src/worktree/: mod.rs
docs/: cc-architecture.md  configuration.md  system-prompt-final.md  system-prompt-review.md  troubleshooting.md
(+12 files in other folders)
