[package]
name = "aegis-core"
version = "0.1.0"
description = "Core agent infrastructure — types, LLM client, tool system, agent loop, three-body harness"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Cashmeran/Deepseek-Aegis"
homepage = "https://github.com/Cashmeran/Deepseek-Aegis"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
reqwest.workspace = true
sha2.workspace = true
futures.workspace = true
dashmap.workspace = true
regex.workspace = true
rusqlite.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
