[package]
name = "aegis-im"
version = "0.1.0"
edition = "2024"
description = "IM bridge — Feishu/WeChat/Telegram adapters for aegis Agent"

[dependencies]
aegis-core = { path = "../core" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
chrono = "0.4"
async-trait = { workspace = true }
