[package]
name = "aegis-im"
version = "0.1.0"
edition = "2024"
description = "IM bridge — Feishu/WeChat/Telegram adapters for aegis Agent"

[dependencies]
aegis-core.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true, features = ["__rustls-tls"] }
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
log = "0.4"
chrono.workspace = true
async-trait.workspace = true
