[package]
name = "aegis-memory"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Cashmeran/deepseek-aegis"
homepage = "https://github.com/Cashmeran/deepseek-aegis"

description = "Causal memory system — GAAMA graph + CraniMem gating + SYNAPSE retrieval"

[features]
default = []
# Enable ONNX-based embedding (requires MSVC toolchain on Windows, or Linux with ort-sys)
embedding = ["edgebert"]

[dependencies]
aegis-core.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
edgebert = { version = "0.4", optional = true }
